1.新增controller日志注解。 2.新增给沙雕们的每日定时任务。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,19 @@
-# 应用名称
-spring.application.name=mymail
-# 应用服务 WEB 访问端口
-server.port=8080
 
-#发送邮件的服务器，这里用的是qq服务器
+spring.application.name=mymail
+server.port=9452
 spring.mail.host=smtp.qq.com
 spring.mail.username=996957240@qq.com
-#授权码，或邮箱密码
-#如果使用的是 163 邮箱，或者 Gmail 邮箱，直接使用密码就可以了，如果使用的是 QQ 邮箱，则需要先获取授权码。
-spring.mail.password=dgjvynjbcrihbbjb
+spring.mail.password=zsgiaqktbdhibdcf
+
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+#????
+spring.aop.auto=true
+spring.aop.proxy-target-class=true
+
+
 
 
 
